--- a/core/pom.xml
+++ b/core/pom.xml
@@ -20,12 +20,12 @@ limitations under the License.
   <parent>
     <groupId>org.apache.calcite</groupId>
     <artifactId>calcite</artifactId>
-    <version>1.4.0-drill-r8-named-params</version>
+    <version>1.4.0-drill-r8-named-params-only</version>
   </parent>
 
   <artifactId>calcite-core</artifactId>
   <packaging>jar</packaging>
-  <version>1.4.0-drill-r8-named-params</version>
+  <version>1.4.0-drill-r8-named-params-only</version>
   <name>Calcite Core</name>
   <description>Core Calcite APIs and engine.</description>
 
