--- a/ubenchmark/pom.xml
+++ b/ubenchmark/pom.xml
@@ -20,7 +20,7 @@ limitations under the License.
   <parent>
     <groupId>org.apache.calcite</groupId>
     <artifactId>calcite</artifactId>
-    <version>1.4.0-drill-r8-named-params</version>
+    <version>1.4.0-drill-r8-named-params-only</version>
   </parent>
 
   <properties>
